--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Learn Periodic Table</title>
     <script>
         function redirectToTable() {
-            window.open("https://saptarshi012-art.github.io/pe/", "_blank");
+            window.open("https://saptarshi012-art.github.io/pech/", "_blank");
         }
     </script>
 </head>
